# ledgr

./: .gitignore  README.md  pyproject.toml
docs/challenges/: 2026-06-23-ledgr-mvp-plan.md  2026-06-23-ledgr-mvp-result.md
docs/plans/: 2026-06-23-ledgr-mvp.md
docs/specs/: 2026-06-23-ledgr-mvp.md
src/ledgr/: __init__.py  cli.py  holdings.py  ledger.py  prices.py  report.py  table.py  xirr.py
tests/: test_cli.py  test_end_to_end.py  test_holdings.py  test_ledger.py  test_prices.py  test_report.py  test_smoke.py  test_table.py  test_xirr.py
