[project]
name = "ledgr"
version = "0.1.0"
description = "CLI to track investment holdings from a plain-text ledger and report current value and yield"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ledgr = "ledgr:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
