[project]
name = "ledgr"
version = "0.1.0"
description = "CLI to track investment holdings from a plain-text ledger and report current value and yield"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
ledgr = "ledgr:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: hits the real Yahoo Finance endpoint; excluded by default"]
addopts = "-m 'not live'"
